# DueDiligence.AI

./: .gitignore  README.md  diligence.db  docker-compose.yml  phase1_prd_blueprint.html  phase2_execution_workspace_prd.html  pyproject.toml  requirements.txt
agents/: builder.py  context.py  critic.py  gatekeeper.py  numbers_engine.py  orchestrator.py  researcher.py
api/: main.py  rate_limiter.py  schemas.py  session_cache.py
api/routes/: workspace.py
data_layer/: apply_schema.py  roadmap_persistence.py  schema.sql  schema_additions.sql  telemetry.py
mcp_servers/: product_signals.py  reddit_sentiment.py  web_scraper.py
services/: checkin_scheduler.py  daily_cron.py  progress_calculator.py
tests/: load_test.py
ui/: app.js  index.html  style.css
